bundled_metadata/force-app/main/default/objects/Country_Market__mdt/Country_Market__mdt.object-meta.xml
<CustomObject>
    <label>Country(Market)</label>
    <pluralLabel>Country(Market)</pluralLabel>
</CustomObject>