bundled_metadata/force-app/main/default/objects/Country_Market__mdt/fields/LanguageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKey__c</fullName>
    <label>LanguageLocaleKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>