bundled_metadata/force-app/main/default/objects/Country_Market__mdt/fields/LocaleSidKey__c.field-meta.xml
<CustomField>
    <fullName>LocaleSidKey__c</fullName>
    <label>LocaleSidKey</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>