bundled_metadata/force-app/main/default/objects/Country_Market__mdt/fields/Number_of_competitors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_competitors__c</fullName>
    <label>Number of competitors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>