bundled_metadata/force-app/main/default/objects/Country_Market__mdt/fields/ShippingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountryCode__c</fullName>
    <label>Shipping Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>