bundled_metadata/force-app/main/default/objects/Country_Market__mdt/fields/TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneSidKey__c</fullName>
    <label>TimeZoneSidKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>